# docs/swagger.json
@@ -16,6 +16,125 @@
     "host": "localhost",
     "basePath": "/content",
     "paths": {
+        "/admin/reward_operations": {
+            "get": {
+                "security": [
+                    {
+                        "AdminUserAuth": []
+                    }
+                ],
+                "description": "Retrieves  all reward operations",
+                "tags": [
+                    "Admin"
+                ],
+                "operationId": "AdminGetRewardOperations",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/RewardOperation"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "AdminUserAuth": []
+                    }
+                ],
+                "description": "Create a new operation",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "operationId": "AdminCreateRewardOperation",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/RewardOperation"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/reward_operations/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "AdminUserAuth": []
+                    }
+                ],
+                "description": "Retrieves a reward operation by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "operationId": "AdminGetRewardOperation",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/RewardOperation"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "AdminUserAuth": []
+                    }
+                ],
+                "description": "Updates a reward operation with the specified id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "operationId": "AdminUpdateRewardOperation",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/RewardOperation"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "AdminUserAuth": []
+                    }
+                ],
+                "description": "Deletes a reward operation with the specified id",
+                "tags": [
+                    "Admin"
+                ],
+                "operationId": "AdminDeleteRewardOperation",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/admin/reward_pool": {
             "post": {
                 "security": [
@@ -23,19 +142,19 @@
                         "AdminUserAuth": []
                     }
                 ],
-                "description": "Create a new reward pool",
+                "description": "Create a new reward inventory",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
                     "Admin"
                 ],
-                "operationId": "AdminCreateRewardPool",
+                "operationId": "AdminCreateRewardInventory",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/RewardPool"
+                            "$ref": "#/definitions/RewardInventory"
                         }
                     }
                 }
@@ -48,7 +167,7 @@
                         "AdminUserAuth": []
                     }
                 ],
-                "description": "Updates a reward pool with the specified id",
+                "description": "Updates a reward inventory with the specified id",
                 "consumes": [
                     "application/json"
                 ],
@@ -58,12 +177,12 @@
                 "tags": [
                     "Admin"
                 ],
-                "operationId": "AdminUpdateRewardPool",
+                "operationId": "AdminUpdateRewardInventory",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/RewardPool"
+                            "$ref": "#/definitions/RewardInventory"
                         }
                     }
                 }
@@ -74,11 +193,11 @@
                         "AdminUserAuth": []
                     }
                 ],
-                "description": "Deletes a reward pool with the specified id",
+                "description": "Deletes a reward inventory with the specified id",
                 "tags": [
                     "Admin"
                 ],
-                "operationId": "AdminDeleteRewardPool",
+                "operationId": "AdminDeleteRewardInventory",
                 "responses": {
                     "200": {
                         "description": ""
@@ -97,7 +216,7 @@
                 "tags": [
                     "Admin"
                 ],
-                "operationId": "AdminGetRewardPools",
+                "operationId": "AdminGetRewardInventories",
                 "parameters": [
                     {
                         "type": "string",
@@ -112,7 +231,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/RewardPool"
+                                "$ref": "#/definitions/RewardInventory"
                             }
                         }
                     }
@@ -126,7 +245,7 @@
                         "AdminUserAuth": []
                     }
                 ],
-                "description": "Retrieves a reward pool by id",
+                "description": "Retrieves a reward inventory by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -136,12 +255,12 @@
                 "tags": [
                     "Admin"
                 ],
-                "operationId": "AdminRewardPool",
+                "operationId": "AdminGetRewardInventory",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/RewardPool"
+                            "$ref": "#/definitions/RewardInventory"
                         }
                     }
                 }
@@ -280,12 +399,12 @@
                 "tags": [
                     "Internal"
                 ],
-                "operationId": "InternalCreateRewardHistoryEntry",
+                "operationId": "InternalCreateReward",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/RewardHistoryEntry"
+                            "$ref": "#/definitions/Reward"
                         }
                     }
                 }
@@ -348,11 +467,106 @@
         }
     },
     "definitions": {
-        "RewardHistoryEntry": {
+        "Reward": {
             "type": "object",
             "properties": {
                 "amount": {
                     "type": "integer"
+                },
+                "date_created": {
+                    "type": "string"
+                },
+                "date_updated": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "org_id": {
+                    "type": "string"
+                },
+                "reward_type": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "RewardInventory": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "date_created": {
+                    "type": "string"
+                },
+                "date_updated": {
+                    "type": "string"
+                },
+                "depleted": {
+                    "type": "boolean"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "in_stock": {
+                    "type": "boolean"
+                },
+                "org_id": {
+                    "type": "string"
+                },
+                "reward_type": {
+                    "description": "t-shirt",
+                    "type": "string"
+                }
+            }
+        },
+        "RewardOperation": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "building_block": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "string"
+                },
+                "date_created": {
+                    "type": "string"
+                },
+                "date_updated": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "org_id": {
+                    "type": "string"
+                },
+                "reward_type": {
+                    "description": "tshirt",
+                    "type": "string"
+                }
+            }
+        },
+        "RewardType": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
                 },
                 "date_created": {
                     "type": "string"
@@ -369,80 +583,14 @@
                 "id": {
                     "type": "string"
                 },
-                "reward_type": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "RewardPool": {
-            "type": "object",
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "amount": {
-                    "type": "integer"
-                },
-                "data": {
-                    "$ref": "#/definitions/model.JSONData"
-                },
-                "date_created": {
-                    "type": "string"
-                },
-                "date_updated": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "reward_code": {
-                    "description": "illini_cash",
-                    "type": "string"
-                }
-            }
-        },
-        "RewardType": {
-            "type": "object",
-            "properties": {
-                "active": {
-                    "type": "boolean"
-                },
-                "amount": {
-                    "description": "5",
-                    "type": "integer"
-                },
-                "building_block": {
-                    "description": "\"content\"",
-                    "type": "string"
-                },
-                "date_created": {
-                    "type": "string"
-                },
-                "date_updated": {
-                    "type": "string"
-                },
-                "display_name": {
-                    "description": "Win five point by five readings",
-                    "type": "string"
-                },
-                "id": {
+                "org_id": {
                     "type": "string"
                 },
                 "reward_type": {
-                    "description": "illini_cash",
+                    "description": "tshirt",
                     "type": "string"
                 }
             }
-        },
-        "model.JSONData": {
-            "type": "object",
-            "additionalProperties": true
         }
     },
     "securityDefinitions": {
